fix text overflow in cards

--- a/site/assets/scss/_variables_project.scss
+++ b/site/assets/scss/_variables_project.scss
@@ -213,7 +213,8 @@ $enable-negative-margins: true;
   align-items: flex-start;
   justify-content: flex-start;
   flex-shrink: 0;
-  height: 300px;
+  min-height: 300px;
+  height: 100%;
   padding-bottom: 2rem;
 }
 .text {
@@ -254,7 +255,6 @@ $enable-negative-margins: true;
   font-size: 12px !important;
   line-height: 16px;
   font-weight: 400;
-  overflow: hidden;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
